Fixed z-index's

--- a/src/styles/completion.module.css
+++ b/src/styles/completion.module.css
@@ -10,7 +10,7 @@
   border-radius: 10px;
   padding: 50px;
 
-  z-index: 100;
+  z-index: 3;
 }
 
 .textWon,
