--- a/src/styles/hamburger.module.css
+++ b/src/styles/hamburger.module.css
@@ -1,6 +1,6 @@
 .settingsButton {
   position: absolute;
-  z-index: 100;
+  z-index: 10;
   top: 25px;
   right: 25px;
 }
