--- a/src/styles/interactionMenu.module.css
+++ b/src/styles/interactionMenu.module.css
@@ -4,7 +4,7 @@
   position: absolute;
   display: flex;
   gap: 20px;
-  z-index: 10;
+  z-index: 2;
 }
 
 .buttons {
