--- a/src/styles/toast.module.css
+++ b/src/styles/toast.module.css
@@ -1,7 +1,7 @@
 .container {
   position: absolute;
   bottom: 20px;
-  z-index: 100;
+  z-index: 10;
 
   padding: 10px 20px;
 
